Mobile overflow is fixed.

--- a/simpleScrollBar/css/sScrollBar.css
+++ b/simpleScrollBar/css/sScrollBar.css
@@ -1,10 +1,17 @@
 /* scroll bar */
-.vScrollbarRail {
+.vScrollbarTrack {
 	position: absolute;
 	top: 0;
 	right: 0;
 	background-color: #e3d4f7;
 	transition: opacity 0.2s;
+}
+.vScrollbarRail {
+	height: inherit;
+	width: inherit;
+	overflow: hidden;
+	position: relative;
+	border-radius: inherit;
 }
 .arrow {
 	background-repeat: no-repeat;
@@ -37,31 +44,64 @@
 	background: #e3d4f7;
 } 
 .hScroll {	
-	overflow-x: auto;
+	overflow-x: scroll !important;
 }
 .vScroll {	
-	overflow-y: auto;
+	overflow-y: scroll !important;
 }
 .noNativeScrollBar {
-	overflow: -moz-scrollbars-none;
 	-ms-overflow-style: none !important;  /* Internet Explorer 10+ */
     scrollbar-width: none !important;  /* Firefox */
+	overflow: -moz-scrollbars-none;
 }
 .noNativeScrollBar::-webkit-scrollbar { 
     display: none !important;  /* Safari and Chrome */
+	width: 0;
+    height: 0;
+    background: transparent;  /* Optional: just make scrollbar invisible */
+    -webkit-overflow-scrolling: touch;
+	-webkit-appearance: none;
+}
+.noNativeScrollBar::-webkit-scrollbar-thumb {
+	display: none !important; 
+    background: transparent;
+	width: 0;
+    height: 0;
+	-webkit-appearance: none;
+}
+.noNativeScrollBar::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: transparent;
+	display: none;
 }
 .noNativeScrollBar::-webkit-scrollbar {
-    width: 0;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
+    width: 0;
+	height: 0;
+    background-color: transparent;
+    border-radius: 0;
 }
-/* Optional: show position indicator in red */
 .noNativeScrollBar::-webkit-scrollbar-thumb {
-    background: transparent;
+	width: 0;
+	height: 0;
+    background-color: transparent;
+    border-radius: 0;
 }
+
 .toolbar-menu{ 
 	padding-top: 1rem !important;
 }
 /* horizontal scrollbar */
+.hScrollbarTrack {
+	position: absolute;
+	left: 0;
+	background-color: #e3d4f7;
+	transition: opacity 0.2s;
+}
+.hScrollbarRail {
+	height: inherit;
+	width: inherit;
+	overflow: hidden;
+}
 .hScrollbarHandle {
 	background: #b87e5c;
 	position: absolute;
@@ -69,9 +109,3 @@
 .hScrollbarHandle:hover  {
 	background: #815b45;
 } 
-.hScrollbarRail {
-	position: absolute;
-	left: 0;
-	background-color: #e3d4f7;
-	transition: opacity 0.2s;
-}
