--- a/simpleScrollBar/demo/demo.css
+++ b/simpleScrollBar/demo/demo.css
@@ -81,7 +81,7 @@ h1,h2, h3, h4 {
 	overflow: auto;
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	padding: 10px;
+	padding: 15px;
 	border-radius: 5px;
 }
 .horizontal-container {
@@ -100,7 +100,7 @@ h1,h2, h3, h4 {
 .noVertical {
 	width:  100%;
 	height: 300px;
-	border: 1px solid #ccc;
+	/* border: 1px solid #ccc; */
 	overflow-x: auto; 
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -117,12 +117,19 @@ h1,h2, h3, h4 {
 	flex-direction: column;
 	margin-bottom: 30px;
 }
-
 p {
 	margin: 0;
 	padding: 10px 0;
 }
-
 .carouselWrapper{
 	padding: 15px;
+}
+
+@media only screen and (max-width: 640px) {
+	.wrapper, .section  {
+		flex-direction: column !important;
+	}
+	.content {
+		width: 100%;
+	}
 }
